--- a/src/pages/App/App.module.scss
+++ b/src/pages/App/App.module.scss
@@ -7,15 +7,28 @@
   display         : grid;
   justify-content : center;
   align-content   : center;
-  gap             : 60px;
+  gap             : 40px;
   position        : relative;
+
+  header {
+    text-align: end;
+
+    button {
+      svg {
+        width : 50px;
+        height: 50px;
+
+        &:hover{
+          scale: 1.4;
+        }
+      }
+    }
+  }
 
   .flashing {
     text-align: center;
-    position  : absolute;
-    bottom    : 8%;
-    left      : 45%;
     animation : flashing 1s cubic-bezier(.45, .05, .55, .95) infinite;
+    height: 21px;
 
     @keyframes flashing {
       0% {
